<resources>
    <string name="app_name">CalendarApp(FrThisTime)</string>
    <string name="event_name">Task Name</string>
    <string name="event_start_date">START DATE</string>
    <string name="event_end_date">END DATE</string>
    <string name="event_reminder">REMINDER</string>
    <string name="event_location">LOCATION</string>
    <string name="event_notes_label">NOTES:</string>

</resources>