<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/event_name"
        android:padding="24dp"
        android:textColorHint="@android:color/secondary_text_light"
        android:textSize="48sp" />

    <Button
        android:id="@+id/event_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#FFFFFF"
        android:padding="24dp"
        android:textAlignment="viewStart"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp"
        tools:text="@string/event_start_date" />

    <Button
        android:id="@+id/event_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#FFFFFF"
        android:padding="24dp"
        android:textAlignment="viewStart"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp"
        tools:text="@string/event_end_date" />

    <Button
        android:id="@+id/event_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#FFFFFF"
        android:padding="24dp"
        android:textAlignment="viewStart"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp"
        tools:text="@string/event_reminder" />

    <EditText
        android:id="@+id/event_notes"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:hint="@string/event_notes_label"
        android:padding="24dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/secondary_text_light"
        android:textColorHint="@android:color/secondary_text_light"
        android:textSize="24sp"
        android:textStyle="bold" />



</LinearLayout>